--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,33 @@
+@import 'source-code-pro/source-code-pro.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #EBE5D0;
+  --foreground: #71513C;
   --card: #ffffff;
-  --card-foreground: #171717;
+  --card-foreground: #71513C;
   --popover: #ffffff;
-  --popover-foreground: #171717;
-  --primary: #171717;
-  --primary-foreground: #ffffff;
-  --secondary: #f5f5f5;
-  --secondary-foreground: #171717;
-  --muted: #f5f5f5;
-  --muted-foreground: #737373;
-  --accent: #f5f5f5;
-  --accent-foreground: #171717;
+  --popover-foreground: #71513C;
+  --primary: #71513C;
+  --primary-foreground: #EBE5D0;
+  --secondary: #ECD5B3;
+  --secondary-foreground: #8C5945;
+  --muted: #B5C8C6;
+  --muted-foreground: #71513C;
+  --accent: #D4927D;
+  --accent-foreground: #ffffff;
   --destructive: #ef4444;
   --destructive-foreground: #ffffff;
-  --border: #e5e5e5;
-  --input: #e5e5e5;
-  --ring: #171717;
+  --border: #ECD5B3;
+  --input: #EBE5D0;
+  --ring: #8C5945;
   --radius: 0.5rem;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: white;
+  color: var(--foreground);
+  background: var(--background);
 }
